dataset1235/2025-2/805158916/users/1084532176/executions/71079933_2149359571.log
== SUBMISSION (2025-08-11 15:18:44)
-- CODE: 
print("A diferença é de:",90-55)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
---- user output:
A diferença é de: 35
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
---- user output:
A diferença é de: 35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 15:18:33)
-- CODE: 
Print("A diferença é de:",90-55)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Print("A diferença é de:",90-55)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Print("A diferença é de:",90-55)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 15:18:43)
-- CODE: 
print("A diferença é de:",90-55)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
---- user output:
A diferença é de: 35
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
---- user output:
A diferença é de: 35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
